完成了注册功能，包括表单验证

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -32,17 +32,17 @@ body {
 
 /* 先让注册的盒子隐藏 */
 
-#register {
+
+/* #register {
     display: none;
-}
+} */
 
 
 /* 让注册的盒子隐藏 */
 
-
-/* #login {
+#login {
     display: none;
-} */
+}
 
 .title {
     height: 60px;
